@@ -1,3 +1,7 @@
+2003-10-25  Wakaba  <wakaba@suika.fam.cx>
+
+	* Formatter.pm (replace): Allow '%foo () ;'.
+
 2003-08-05  Wakaba  <wakaba@suika.fam.cx>
 
 	* Error.pm (_default_error_handler): Syntax fix.
